# clion-projects

./: README.md
CppExample/: CMakeLists.txt  Dockerfile  main.cpp
CppExample/dev-env/: README.md  build_container  restart_container  run_container  stop_container
cpp_test/: CMakeLists.txt
cpptest2/: CMakeCache.txt  CMakeLists.txt
cuda_test/: CMakeLists.txt  main.cu  readme.md
docker_test/: CMakeLists.txt
